Finalized db support for adding accounts and exchanges Implemented spring security jwt verification